--- a/templates/wb_form_wind_option.html
+++ b/templates/wb_form_wind_option.html
@@ -4,7 +4,7 @@
     <input type="number" min="0" {% if wind_direction is undefined or wind_direction == 'headwind' %}max="20"{% else %}max="10"{% endif %} placeholder="Wind (kts)" id="wind" name="wind" required {% if wind 
         %}value="{{ wind }}"{% endif %} 
             class="shadow mr-2 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-    <select id="wind-direction" hx-get="/wind-option" hx-trigger="change" hx-target="#wind-option" hx-include="[name='wind'],[name='wind_direction']" name="wind_direction" required class="custom-select shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline cursor-pointer">
+    <select aria-label="Windrichting" id="wind-direction" hx-get="/wind-option" hx-trigger="change" hx-target="#wind-option" hx-include="[name='wind'],[name='wind_direction']" name="wind_direction" required class="custom-select shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline cursor-pointer">
         <option value="headwind" {% if wind_direction is undefined or wind_direction == 'headwind' %}selected{% endif %}>Tegenwind</option>
         <option value="tailwind" {% if wind_direction is defined and wind_direction == 'tailwind' %}selected{% endif %}>Rugwind</option>
     </select>
