--- a/templates/index.html
+++ b/templates/index.html
@@ -60,11 +60,13 @@
     </header>
     <main class="max-w-7xl mx-auto mt-16 p-4">
         <div class="flex flex-col lg:items-stretch w-full" id="#main">
-                {% include "stepper.html" %}
                 {% include "wb_form.html" %}
         </div>
     </main>
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </body>
 </html>
 
